# Nebulous

./: .gitignore  .gitmodules  Backlog  README.md  generate.bat  generate_with_dependencies.bat  premake5.lua  project.lua  utils.lua  workspace.lua
Flock/: CMakeLists.txt  generate.bat  premake5.lua
Flock/Client/: client.cpp
Flock/ClientConsole/: client.cpp
Flock/Common/: Box.hpp  Box.inl  Console.hpp  Entity.hpp  Flocking.cpp  Flocking.hpp  MathUtils.hpp  Plane.hpp  Plane.inl  Ray.hpp  Ray.inl  StopWatch.hpp  Vector4.hpp  Vector4.inl
Flock/Common/Entity/: Entity.hpp
Flock/Common/Math/: Box.hpp  Box.inl  Math.hpp  Plane.hpp  Plane.inl  Ray.hpp  Ray.inl  Vector4.hpp  Vector4.inl
Flock/Common/Platform/: Console.cpp  Console.hpp  StopWatch.cpp  StopWatch.hpp
Flock/Server/: Flocking.cpp  Flocking.hpp  server.cpp
Nebulae/: generate.bat  premake5.lua
Nebulae/Alpha/: Alpha.cpp  Alpha.h  premake5.lua
Nebulae/Audio/: AudioDecoder_Ogg.cpp  AudioDriver.h  AudioEmitterInterface.h  AudioManager.cpp  AudioManager.h  (+3 more)
RenderSystems/: premake5.lua
Samples/: premake5.lua
Scratch/: AudioDecoderScratch.cpp  AudioExample.cpp  PrefabFactory.cpp  PrefabFactory.h  cOggDecoder.cpp  cmakelists_link_example.txt  debug_rendering  default_gui.material.json  filetypedecoderselection.cpp  libsDb.lua  particle engine thoughts  playing around with boost_any for Variable tables  premake.lua  sample ui descriptor files xml.xml  sample ui descriptor files.json  squidish_world  thoughts on application object & mvc
documents/: thoughts
tests/: libraries.lua  main.cpp  premake5.lua
(+522 files in other folders)
